--- a/home.html
+++ b/home.html
@@ -53,10 +53,12 @@
         </section>
     </main>
     <footer>
-        <div class="social">
-            <a id="git" href="#">GitHub</a>
-            <a id="git" href="#">GitHub</a>
-            <a id="git" href="#">GitHub</a>
+        <div class="block">
+            <div class="socialdiv">
+                <a id="git" href="#"><img src="images/git.png" class="social"></a>
+                <a id="insta" href="#"><img src="images/insta.png" class="social"></a>
+                <a id="face" href="#"><img src="images/face.png" class="social"></a>
+            </div>
         </div>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
         <p id="date">Last update:&nbsp;<span id="lastModified"></span></p>
