--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Silas Gomes - Contact page: This is a page for users make a reservation or get in touch with the restaurant.">
+    <title>Index Page</title>
+    <meta name="description" content="WDD 231 – eb Frontend Development I - Silas Gomes - Index Page: This page presents the student and the courses they have completed so far.">
     <meta name="author"  content="silas gomes neto">
     <!---fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,12 @@
         </div>
         <section class="web">
             <h2 class="title" id="web">Web Certificate Courses</h2>
-            <p id="pAM">Text</p>
+            <div class="button2">
+                <a class="filter" id="all" href="#">All</a>
+                <a class="filter" id="cse" href="#">CSE</a>
+                <a class="filter" id="wdd" href="#">WDD</a>
+            </div>
+            <div class="courses"></div>
         </section>
     </main>
     <footer>
