--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <header id="menu">
-        <img id="logo" src="images/logo.jpeg" alt="logo">
+        <img id="logo" src="images/logo.jpeg" alt="logo" loading="lazy">
         <div id="humbutton">
-            <h1 id="title">Site Name</h1>
+            <h1 id="title">Student Portal</h1>
             <a id="hidden-menu" href="#"></a>
         </div>
         <nav class="navigation">
@@ -44,7 +44,7 @@
             </section>
             <section class="photo">
                 <h2 class="title">Student Photo</h2>
-                <img src="images/profile.jfif" id="student-photo">
+                <img src="images/profile.jfif" id="student-photo" loading="lazy">
             </section>
         </div>
         <section class="web">
@@ -55,14 +55,15 @@
                 <a class="filter" id="wdd" href="#">WDD</a>
             </div>
             <div class="courses"></div>
+            <p>Total Credits: <span id="credit"></span></p>
         </section>
     </main>
     <footer>
         <div class="block">
             <div class="socialdiv">
-                <a id="git" href="#"><img src="images/git.png" class="social"></a>
-                <a id="insta" href="#"><img src="images/insta.png" class="social"></a>
-                <a id="face" href="#"><img src="images/face.png" class="social"></a>
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social"></a>
             </div>
         </div>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
