--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="menu">
         <img id="logo" src="images/logo.jpeg" alt="logo" loading="lazy">
         <div id="humbutton">
-            <h1 id="title">Student Portal</h1>
+            <h1 id="title">Student Portal - Index Page</h1>
             <a id="hidden-menu" href="#"></a>
         </div>
         <nav class="navigation">
@@ -44,7 +44,7 @@
             </section>
             <section class="photo">
                 <h2 class="title">Student Photo</h2>
-                <img src="images/profile.jfif" id="student-photo" loading="lazy">
+                <img src="images/profile.jfif" id="student-photo" loading="lazy" alt="me">
             </section>
         </div>
         <section class="web">
@@ -61,9 +61,9 @@
     <footer>
         <div class="block">
             <div class="socialdiv">
-                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social"></a>
-                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social"></a>
-                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social"></a>
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face"></a>
             </div>
         </div>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
