--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     <!--facebook meta-->
     <meta property="og:title" content="Valparaiso de Goias Chamber of Commerce">
     <meta property="og:description" content="Supporting local businesses and promoting economic growth in Valparaíso de Goiás. Join us to network, find resources, and build a stronger community.">
-    <meta property="og:image" content="https://github.com/MagoPrismo/wdd231/blob/main/val.png?raw=true">
+    <meta property="og:image" content="https://raw.githubusercontent.com/MagoPrismo/wdd231/refs/heads/main/val.png">
     <meta property="og:locale" content="en_US">
     <!---fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
