--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,8 +25,45 @@
     <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
-    <header></header>
+    <header id="menu">
+        <img id="logo" src="images/logo.png" alt="logo" loading="lazy">
+        <div id="humbutton">
+            <h1 id="title">Chamber of Commerce - Valparaiso, GO</h1>
+            <a id="hidden-menu" href="#"></a>
+        </div>
+        <nav class="navigation">
+            <a class="button" id="home" href="#">Home</a>
+            <a class="button" id="chamber" href="#">Chamber</a>
+            <a class="button" id="final" href="#">Final</a> 
+        </nav>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="block">
+            <div class="contact">
+                <p id="yellow"><strong>Valparaiso GO - Chamber of Commerce</strong></p>
+                <p class="foot">Rua Desembargador Dr. José Dilermando Meireles <br> Av. Central Norte s/n, Cidade Jardins</p>
+                <p class="foot">+55 (61) 3627-8953</p>
+                <p class="foot">prefeitura@valparaisodegoias.go.gov.br</p>
+            </div>
+            <div class="socialdiv">
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face"></a>
+            </div>
+            <div class="student">
+                <p class="foot">WDD231 BYU Project</p>
+                <p class="foot">Silas Gomes Netos</p>
+                <p class="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
+                <p class="foot">Last update:&nbsp;<span id="lastModified"></span></p>
+                <!--
+                <a class="foot" href="https://www.flaticon.com/br/icones-gratis/github" title="github ícones">Github ícones criados por Freepik - Flaticon</a>
+                <a class="foot" href="https://www.flaticon.com/br/icones-gratis/logotipo-do-instagram" title="logotipo do instagram ícones">Logotipo do instagram ícones criados por Rakib Hassan Rahim - Flaticon</a>
+                <a class="foot" href="https://www.flaticon.com/br/icones-gratis/facebook" title="facebook ícones">Facebook ícones criados por Freepik - Flaticon</a>
+                -->
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
+
