--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,12 +28,12 @@
     <header id="menu">
         <img id="logo" src="images/logo.png" alt="logo" loading="lazy">
         <div id="humbutton">
-            <h1 id="title">Chamber of Commerce - Valparaiso, GO</h1>
+            <h1 id="title">Valparaiso GO - Chamber of Commerce</h1>
             <a id="hidden-menu" href="#"></a>
         </div>
         <nav class="navigation">
             <a class="button" id="home" href="#">Home</a>
-            <a class="button" id="chamber" href="#">Chamber</a>
+            <a class="button" id="chamber" href="directory.html">Chamber</a>
             <a class="button" id="final" href="#">Final</a> 
         </nav>
     </header>
