--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,11 +33,17 @@
         </div>
         <nav class="navigation">
             <a class="button" id="home" href="#">Home</a>
-            <a class="button" id="chamber" href="directory.html">Chamber</a>
-            <a class="button" id="final" href="#">Final</a> 
+            <a class="button" id="discover" href="#">Discover</a>
+            <a class="button" id="Directory" href="directory.html">Directory</a>
+            <a class="button" id="join" href="#">Join</a>
+            <a class="button" id="join" href="#">Join</a>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="hero">
+            <img id="hero" src="images/hero.png" alt="heroimg">
+        </div>
+    </main>
     <footer>
         <div class="block">
             <div class="contact">
