--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Directory</title>
+    <title>Home</title>
     <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce: This page has the purpose to present the local companies, and to connect them.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
@@ -39,6 +39,9 @@
         </nav>
     </header>
     <main>
+        <div class="hero">
+            <img id="hero" src="images/hero.png" alt="heroimg">
+        </div>
     </main>
     <footer>
         <div class="block">
@@ -68,4 +71,3 @@
     </footer>
 </body>
 </html>
-
