--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,6 +39,9 @@
         </nav>
     </header>
     <main>
+        <div id="members">
+            <h1>Members</h1>
+        </div>
     </main>
     <footer>
         <div class="block">
