--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,9 +39,8 @@
         </nav>
     </header>
     <main>
-        <div id="members">
-            <h1>Members</h1>
-        </div>
+        <h1>Members</h1>
+        <div id="members"></div>
     </main>
     <footer>
         <div class="block">
