--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,13 @@
         </nav>
     </header>
     <main>
-        <h1>Members</h1>
+        <div class="navigation2">
+            <h1>Members</h1>
+            <div class="button2">
+                <button id="grid">Grid</button>
+                <button id="list">List</button>
+            </div>
+        </div>
         <div id="members"></div>
     </main>
     <footer>
