--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,11 +42,11 @@
         <div class="navigation2">
             <h1>Members</h1>
             <div class="button2">
-                <button id="grid">Grid</button>
-                <button id="list">List</button>
+                <a id="grid" href="#">Grid</a>
+                <a id="list" href="#">List</a>
             </div>
         </div>
-        <div id="members"></div>
+        <div id="members" class="grid"></div>
     </main>
     <footer>
         <div class="block">
