--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header id="menu">
-        <img id="logo" src="images/logo.png" alt="logo" loading="lazy">
+        <img id="logo" src="images/logo.webp" alt="logo" loading="lazy">
         <div id="humbutton">
             <h1 id="title">Valparaiso GO - Chamber of Commerce</h1>
             <a id="hidden-menu" href="#"></a>
@@ -57,9 +57,9 @@
                 <p class="foot">prefeitura@valparaisodegoias.go.gov.br</p>
             </div>
             <div class="socialdiv">
-                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git"></a>
-                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta"></a>
-                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face"></a>
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.webp" class="social" alt="git"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.webp" class="social" alt="insta"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.webp" class="social" alt="face"></a>
             </div>
             <div class="student">
                 <p class="foot">WDD231 BYU Project</p>
