--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header id="menu">
-        <img id="logo" src="images/logo.png" alt="logo" loading="lazy">
+        <img id="logo" src="images/logo.webp" alt="logo" loading="lazy">
         <div id="humbutton">
             <h1 id="title">Valparaiso GO - Chamber of Commerce</h1>
             <a id="hidden-menu" href="#"></a>
@@ -40,7 +40,7 @@
     </header>
     <main>
         <div class="hero">
-            <img id="hero" src="images/hero.png" alt="heroimg">
+            <img id="hero" src="images/hero.webp" alt="heroimg">
         </div>
     </main>
     <footer>
