--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,6 +36,9 @@
             <a class="button" id="discover" href="#">Discover</a>
             <a class="button" id="Directory" href="directory.html">Directory</a>
             <a class="button" id="join" href="#">Join</a>
+            <a class="button" id="about" href="#">About</a>
+            <a class="button" id="podcast" href="#">PodCast</a>
+            <a class="button" id="events" href="#">Events</a>
         </nav>
     </header>
     <main>
@@ -52,9 +55,8 @@
         <div class="block">
             <div class="contact">
                 <p id="yellow"><strong>Valparaiso GO - Chamber of Commerce</strong></p>
-                <p class="foot">Rua Desembargador Dr. José Dilermando Meireles <br> Av. Central Norte s/n, Cidade Jardins</p>
+                <p class="foot">R. Desembargador Dr. José Dilermando Meireles <br> Av. Central Norte s/n, Cidade Jardins</p>
                 <p class="foot">+55 (61) 3627-8953</p>
-                <p class="foot">prefeitura@valparaisodegoias.go.gov.br</p>
             </div>
             <div class="socialdiv">
                 <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.webp" class="social" alt="git"></a>
