--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <div class="navigation2">
-            <h1>Members</h1>
+            <h1>Business Directory</h1>
             <div class="button2">
                 <a id="grid" href="#">Grid</a>
                 <a id="list" href="#">List</a>
