--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,6 +23,7 @@
     <!--css and js-->
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/base.js" defer></script>
     <!--favicon-->
     <link rel="icon" href="images/favicon.ico">
 </head>
