--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,11 @@
     </header>
     <main>
         <div class="hero">
-            <img id="hero" src="images/hero.webp" alt="heroimg">
+            <picture id="logo">
+                <source media="(max-width: 500px)" srcset="images/hero2.png">
+                <source media="(min-width: 501px)" srcset="images/hero.webp">
+                <img id="mobile" src="images/hero.webp" alt="logo" loading="lazy">
+            </picture>  
             <a id="call" href="#">Join Us!</a>
         </div>
         <h1>Home</h1>
