--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,8 +46,8 @@
     </header>
     <main>
         <div class="hero">
-            <picture id="logo">
-                <source media="(max-width: 500px)" srcset="images/hero2.png">
+            <picture>
+                <source media="(max-width: 500px)" srcset="images/hero2.webp">
                 <source media="(min-width: 501px)" srcset="images/hero.webp">
                 <img id="mobile" src="images/hero.webp" alt="logo" loading="lazy">
             </picture>  
