--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce: This page has the purpose to present the local companies, and to connect them.">
+    <title>Home Page-The page to show the weather and some members</title>
+    <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Home page): This page has the purpose to present the local weather, and some of the local commerce.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
     <meta property="og:title" content="Valparaiso de Goias Chamber of Commerce">
@@ -45,6 +45,7 @@
         </nav>
     </header>
     <main>
+        <h1>Home</h1>
         <div class="hero">
             <picture>
                 <source media="(max-width: 500px)" srcset="images/hero2.webp">
@@ -53,7 +54,6 @@
             </picture>  
             <a id="call" href="#">Join Us!</a>
         </div>
-        <h1>Home</h1>
         <div class="events_weather">
             <div class="block1">
                 <h2>Events</h2>
