--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
             <a class="button" id="home" href="index.html">Home</a>
             <a class="button" id="discover" href="#">Discover</a>
             <a class="button" id="Directory" href="directory.html">Directory</a>
-            <a class="button" id="join" href="#">Join</a>
+            <a class="button" id="join" href="join.html">Join</a>
             <a class="button" id="about" href="#">About</a>
             <a class="button" id="podcast" href="#">PodCast</a>
             <a class="button" id="events" href="#">Events</a>
@@ -52,7 +52,7 @@
                 <source media="(min-width: 501px)" srcset="images/hero.webp">
                 <img id="mobile" src="images/hero.webp" alt="logo" loading="lazy">
             </picture>  
-            <a id="call" href="#">Join Us!</a>
+            <a id="call" href="join.html">Join Us!</a>
         </div>
         <div class="events_weather">
             <div class="block1">
