--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
             <a class="button" id="home" href="index.html">Home</a>
             <a class="button" id="discover" href="#">Discover</a>
             <a class="button" id="Directory" href="directory.html">Directory</a>
-            <a class="button" id="join" href="#">Join</a>
+            <a class="button" id="join" href="join.html">Join</a>
             <a class="button" id="about" href="#">About</a>
             <a class="button" id="podcast" href="#">PodCast</a>
             <a class="button" id="events" href="#">Events</a>
