--- a/chamber/join.html
+++ b/chamber/join.html
@@ -132,7 +132,7 @@
                     <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Bronze Membership</h2>
-                    <p>Access to basic content and community forums.</p>
+                    <p>Access to basic content and community forums. $12 per month.</p>
                     </div>
                 </div>
 
@@ -140,7 +140,7 @@
                     <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Silver Membership</h2>
-                    <p>Includes Bronze benefits + monthly newsletter and webinars.</p>
+                    <p>Includes Bronze benefits + monthly newsletter and webinars. It includes some special events. $20 per month.</p>
                     </div>
                 </div>
 
@@ -148,15 +148,7 @@
                     <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Gold Membership</h2>
-                    <p>Everything in Silver + premium content and priority support.</p>
-                    </div>
-                </div>
-
-                <div id="platinum-modal" class="modal">
-                    <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h2>Platinum Membership</h2>
-                    <p>All benefits + 1-on-1 coaching and lifetime access.</p>
+                    <p>Everything in Silver + 1-on-1 coaching and lifetime access. $25 per month.</p>
                     </div>
                 </div>
             </div>
