--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -80,7 +80,7 @@
     
         document.getElementById("userInfo").innerHTML = `
         <h3>We have received your information ${name}</h3>
-        <p>Company Name: ${company}</p>
+        <p>Company's Name: ${company}</p>
         <p>Email: ${email}</p>
         <p>Phone: ${phone}</p>
         <p>Time: ${time}</p>
