--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,11 +52,11 @@
                     <input type="hidden" id="timestamp" name="timestamp">
                     <div class="box1">
                         <label for="firstName">First Name:</label>
-                        <input name="firstName" id="firstName" type="text" autocomplete="first-name" placeholder="John" required>    
+                        <input name="firstName" id="firstName" type="text" autocomplete="given-name" placeholder="John" required>    
                     </div>
                     <div class="box1">
                         <label for="lastName">Last Name:</label>
-                        <input name="lastName" id="lastName" type="text" autocomplete="last-name" placeholder="Wick" required> 
+                        <input name="lastName" id="lastName" type="text" autocomplete="family-name" placeholder="Wick" required> 
                     </div>
                     <div class="box1">
                         <label for="organizational">Title</label>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="box1">
                         <label for="phone">Mobile Phone Number:</label>
-                        <input name="phone" id="phone" type="tel" autocomplete="phone" placeholder="123-456-7890" required>
+                        <input name="phone" id="phone" type="tel" autocomplete="tel" placeholder="123-456-7890" required>
                     </div>
                     <div class="box1">
                         <label for="name">Business/Organization's Name</label>
@@ -82,22 +82,22 @@
                     <div id="ratio">
                         <h3>Member Level</h3>
                         <div class="radios">
-                            <input name="level" id="non" type="radio">
+                            <input name="level0" id="non" type="radio">
                             <label>Non Profit Membership</label>
                         </div>
                         
                         <div class="radios">
-                            <input name="level" id="bronze" type="radio" name="level">
+                            <input name="level1" id="bronze" type="radio" name="level">
                             <label>Bronze Membership</label>
                         </div>
 
                         <div class="radios">
-                            <input name="level" id="silver" type="radio" name="level">
+                            <input name="level2" id="silver" type="radio" name="level">
                             <label>Silver Membership</label>
                         </div>
 
                         <div class="radios">
-                            <input name="level" id="gold" type="radio" name="level">
+                            <input name="level3" id="gold" type="radio" name="level">
                             <label>Gold Membership</label>
                         </div>  
                     </div>
