--- a/chamber/join.html
+++ b/chamber/join.html
@@ -82,22 +82,22 @@
                     <div id="ratio">
                         <h3>Member Level</h3>
                         <div class="radios">
-                            <input name="level0" id="non" type="radio">
+                            <input name="level" id="non" type="radio">
                             <label>Non Profit Membership</label>
                         </div>
                         
                         <div class="radios">
-                            <input name="level1" id="bronze" type="radio" name="level">
+                            <input id="bronze" type="radio" name="level">
                             <label>Bronze Membership</label>
                         </div>
 
                         <div class="radios">
-                            <input name="level2" id="silver" type="radio" name="level">
+                            <input id="silver" type="radio" name="level">
                             <label>Silver Membership</label>
                         </div>
 
                         <div class="radios">
-                            <input name="level3" id="gold" type="radio" name="level">
+                            <input id="gold" type="radio" name="level">
                             <label>Gold Membership</label>
                         </div>  
                     </div>
