--- a/chamber/join.html
+++ b/chamber/join.html
@@ -82,7 +82,7 @@
                     <div id="ratio">
                         <h3>Member Level</h3>
                         <div class="radios">
-                            <input name="level" id="non" type="radio">
+                            <input id="non" type="radio" name="level" >
                             <label>Non Profit Membership</label>
                         </div>
                         
