--- a/chamber/join.html
+++ b/chamber/join.html
@@ -162,9 +162,9 @@
                 <p class="foot">+55 (61) 3627-8953</p>
             </div>
             <div class="socialdiv">
-                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.webp" class="social" alt="git"></a>
-                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.webp" class="social" alt="insta"></a>
-                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.webp" class="social" alt="face"></a>
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face"></a>
             </div>
             <div class="student">
                 <p class="foot">WDD231 BYU Project</p>
