--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header id="menu">
-        <img id="logo" src="images/logo.webp" alt="logo" loading="lazy">
+        <img id="logo" src="images/logo.webp" alt="logo" loading="lazy" width="85" height="85">
         <div id="humbutton">
             <h1 id="title">Valparaiso GO - Chamber of Commerce</h1>
             <a id="hidden-menu" href="#"></a>
@@ -169,9 +169,9 @@
                 <p class="foot">+55 (61) 3627-8953</p>
             </div>
             <div class="socialdiv">
-                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git"></a>
-                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta"></a>
-                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face"></a>
+                <a id="git" href="https://github.com/MagoPrismo"><img src="images/git.png" class="social" alt="git" width="64" height="64"></a>
+                <a id="insta" href="https://www.instagram.com/silasneto_gomes/"><img src="images/insta.png" class="social" alt="insta" width="64" height="64"></a>
+                <a id="face" href="https://m.facebook.com/silas.gms/"><img src="images/face.png" class="social" alt="face" width="64" height="64"></a>
             </div>
             <div class="student">
                 <p class="foot">WDD231 BYU Project</p>
