--- a/chamber/join.html
+++ b/chamber/join.html
@@ -86,26 +86,26 @@
                         <textarea name="description" id="description" rows="9" placeholder=" Type here..."></textarea>
                     </div>
                     
-                    <div id="ratio">
+                    <div id="radio">
                         <h3>Member Level</h3>
                         <div class="radios">
-                            <label>Non Profit Membership</label>
                             <input id="non" type="radio" name="level" >
+                            <label for="non">Non Profit Membership</label>
                         </div>
                         
                         <div class="radios">
-                            <label>Bronze Membership</label>
                             <input id="bronze" type="radio" name="level">
+                            <label for="bronze">Bronze Membership</label>
                         </div>
 
                         <div class="radios">
-                            <label>Silver Membership</label>
                             <input id="silver" type="radio" name="level">
+                            <label for="silver">Silver Membership</label>
                         </div>
 
                         <div class="radios">
-                            <label>Gold Membership</label>
                             <input id="gold" type="radio" name="level">
+                            <label for="gold">Gold Membership</label>
                         </div>  
                     </div>
                     <div id="submit">
