--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Us -The page to join the commerce</title>
+    <title>Join Us!</title>
     <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Join Us page): This page has the purpose to apply new members for the chamber of commerce.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
@@ -54,7 +54,7 @@
         <h1>Join Us!</h1>
         <div id="joinus">
             <div id="info">
-                <form id="myForm">
+                <form id="myForm" action="thankyou.html" method="get">
                     <h2>Membership Application Form</h2>
                     <input type="hidden" id="timestamp" name="timestamp">
                     <div class="box1">
