--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page-The page to show the weather and some members</title>
+    <title>Home</title>
     <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Home page): This page has the purpose to present the local weather, and some of the local commerce.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
