--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Us!</title>
+    <title>Join Us -The for new members to apply for the chamber of commerce </title>
     <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Join Us page): This page has the purpose to apply new members for the chamber of commerce.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
