--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You!</title>
+    <title>Thank You-The page after hit the Apply btn</title>
     <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Thank you page): This page has the purpose to present the members that their appication has been submitted.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
