--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -42,7 +42,7 @@
         </div>
         <nav class="navigation">
             <a class="button" id="home" href="index.html">Home</a>
-            <a class="button" id="discover" href="#">Discover</a>
+            <a class="button" id="discover" href="discover.html">Discover</a>
             <a class="button" id="Directory" href="directory.html">Directory</a>
             <a class="button" id="join" href="join.html">Join</a>
             <a class="button" id="about" href="#">About</a>
