--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page-The page to show the weather and some members</title>
-    <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Home page): This page has the purpose to present the local weather, and some of the local commerce.">
+    <title>Home Page-The page to show the fun places in the city</title>
+    <meta name="description" content="WDD 231 - Web Frontend Development I - Silas Gomes - Chamber of Commerce (Discover page): This page has the purpose to present the fun places in the city.">
     <meta name="author"  content="Silas Gomes Neto">
     <!--facebook meta-->
     <meta property="og:title" content="Valparaiso de Goias Chamber of Commerce">
